Replace  all occurences of kigaprio to priotag

--- a/monitoring/alertmanager/templates/email.tmpl
+++ b/monitoring/alertmanager/templates/email.tmpl
@@ -205,7 +205,7 @@
     </div>
 
     <div class="footer">
-        <p>KigaPrio Monitoring System</p>
+        <p>PrioTag Monitoring System</p>
         <p>This is an automated alert from AlertManager</p>
         <p><small>Alert fingerprint: {{ .GroupLabels.alertname }}-{{ .GroupLabels.severity }}</small></p>
     </div>
