Replace domain with new one

--- a/monitoring/alertmanager/templates/email.tmpl
+++ b/monitoring/alertmanager/templates/email.tmpl
@@ -192,8 +192,7 @@
 
         <!-- Action Buttons -->
         <div style="text-align: center; margin: 20px 0;">
-            <a href="https://grafana.kiga.dhjd.de" class="button">View Grafana Dashboard</a>
-            <a href="https://prometheus.kiga.dhjd.de" class="button">View Prometheus</a>
+            <a href="https://prometheus.priotag.de" class="button">View Prometheus</a>
         </div>
 
         <!-- Runbook Link (if available) -->
